--- a/app/views/employments/_form.html.erb
+++ b/app/views/employments/_form.html.erb
@@ -26,7 +26,11 @@
     <%= f.text_field :type_of_employment %>
   </div>
   <div class="field">
-    <%= f.label :name %><br />
+    <%= f.label :position %><br />
+    <%= f.text_field :position %>
+  </div>
+  <div class="field">
+    <%= f.label :name_of_company %><br />
     <%= f.text_field :name %>
   </div>
   <div class="field">
