--- a/app/views/promotion_demotions/_form.html.erb
+++ b/app/views/promotion_demotions/_form.html.erb
@@ -11,7 +11,7 @@
     </div>
   <% end %>
 
-    <%= f.hidden_field :rid_id, value: @rid.id %>
+    <%= f.hidden_field :rid_id, value: @personal_detail.rid.id %>
 
   <div class="field">
     <%= f.label :from %><br />
