--- a/app/views/educational_backgrounds/_form.html.erb
+++ b/app/views/educational_backgrounds/_form.html.erb
@@ -10,143 +10,39 @@
       </ul>
     </div>
   <% end %>
-<legend>Elementary</legend>
-  <%= f.hidden_field :personal_detail_id, value: @personal_detail.id if @educational_background.personal_detail_id.nil? %>
+
+  <%= f.hidden_field :personal_detail_id, value: @personal_detail.id %>
+
   <div class="field">
-    <%= f.label :location %><br />
-    <%= f.text_field :elementary_location %>
+    <%= f.label :level %>
+    <%= f.select :level, "<option>Elementary</option><option>High School</option><option>College</option><option>Post Graduate</option><option>Others</option>".html_safe, prompt: "Please select" %>
   </div>
   <div class="field">
-    <%= f.label :from %><br />
-    <%= f.date_select :elementary_date_of_attendance1, start_year: Date.today.strftime("%Y").to_i - 65, end_year: Date.today.strftime("%Y").to_i %>
+    <%= f.label :location %>
+    <%= f.text_area :location, rows: 3 %>
   </div>
   <div class="field">
-    <%= f.label :until %><br />
-    <%= f.date_select :elementary_date_of_attendance2, start_year: Date.today.strftime("%Y").to_i - 65, end_year: Date.today.strftime("%Y").to_i %>
+    <%= f.label :Date_of_attendance %>
+    <small>From</small>
+    <%= f.date_select :date_of_attendance1, start_year: Date.today.strftime("%Y").to_i - 65, end_year: Date.today.strftime("%Y").to_i %><br>
+    <small>Until</small>
+    <%= f.date_select :date_of_attendance2, start_year: Date.today.strftime("%Y").to_i - 65, end_year: Date.today.strftime("%Y").to_i %>
   </div>
   <div class="field">
-    <%= f.label :year_graduated %><br />
-    <%= f.number_field :elementary_year_graduate %>
-  </div>
-  <div class="field">
-    <%= f.label :standing %>
-    <%= f.text_field :elementary_standing %>
-  </div>
-    <div class="field">
-      <label>Leave this box checked if you have completed this course, uncheck it if otherwise: <%= f.check_box :elementary_completed %></label>
-    </div>
-    <legend>High School</legend>
-  <div class="field">
-    <%= f.label :location %><br />
-    <%= f.text_field :high_school_location, placeholder: "Leave blank if not applicable" %>
-  </div>
-  <div class="field">
-    <%= f.label :from %><br />
-    <%= f.date_select :high_school_date_of_attendance1, start_year: Date.today.strftime("%Y").to_i - 65, end_year: Date.today.strftime("%Y").to_i %>
-  </div>
-  <div class="field">
-    <%= f.label :until %><br />
-    <%= f.date_select :high_school_date_of_attendance2, start_year: Date.today.strftime("%Y").to_i - 65, end_year: Date.today.strftime("%Y").to_i %>
-  </div>
-  <div class="field">
-    <%= f.label :year_graduated %><br />
-    <%= f.number_field :high_school_year_graduate %>
+    <%= f.label :year_graduate %>
+    <%= f.text_field :year_graduate %>
   </div>
   <div class="field">
     <%= f.label :standing %>
-    <%= f.text_field :high_school_standing %>
-  </div>
-    <div class="field">
-      <label>Leave this box checked if you have completed this course, uncheck it if otherwise: <%= f.check_box :high_school_completed %></label>
-    </div>
-    <legend>College</legend>
-  <div class="field">
-    <%= f.label :location %><br />
-    <%= f.text_field :college_location, placeholder: "Leave blank if not applicable" %>
+    <%= f.text_field :standing %>
   </div>
   <div class="field">
-    <%= f.label :from %><br />
-    <%= f.date_select :college_date_of_attendance1, start_year: Date.today.strftime("%Y").to_i - 65, end_year: Date.today.strftime("%Y").to_i %>
+    <label>Degree/Course Taken</label><br />
+    <%= f.text_field :degree, placeholder: "Leave Blank if not applicable" %>
   </div>
   <div class="field">
-    <%= f.label :until %><br />
-    <%= f.date_select :college_date_of_attendance2, start_year: Date.today.strftime("%Y").to_i - 65, end_year: Date.today.strftime("%Y").to_i %>
-  </div>
-    <div class="field">
-      <%= f.label :Course %>
-      <%= f.text_field :college_course %>
-    </div>
-  <div class="field">
-    <%= f.label :year_graduated %><br />
-    <%= f.number_field :college_year_graduate %>
-  </div>
-  <div class="field">
-    <%= f.label :standing %>
-    <%= f.text_field :college_standing %>
-  </div>
-    <div class="field">
-      <label>Leave this box checked if you have completed this course, uncheck it if otherwise: <%= f.check_box :college_completed %></label>
-    </div>
-    <legend>Post Graduate</legend>
-  <div class="field">
-    <%= f.label :location %><br />
-    <%= f.text_field :post_graduate_location, placeholder: "Leave blank if not applicable" %>
-  </div>
-  <div class="field">
-    <%= f.label :from %><br />
-    <%= f.date_select :post_graduate_date_of_attendance1, start_year: Date.today.strftime("%Y").to_i - 65, end_year: Date.today.strftime("%Y").to_i %>
-  </div>
-  <div class="field">
-    <%= f.label :until %><br />
-    <%= f.date_select :post_graduate_date_of_attendance2, start_year: Date.today.strftime("%Y").to_i - 65, end_year: Date.today.strftime("%Y").to_i %>
-  </div>
-    <div class="field">
-      <%= f.label :Course %>
-      <%= f.text_field :postgraduate_course %>
-    </div>
-  <div class="field">
-    <%= f.label :year_graduate %><br />
-    <%= f.number_field :post_graduate_year_graduate %>
-  </div>
-  <div class="field">
-    <%= f.label :standing %>
-    <%= f.text_field :post_grad_standing %>
-  </div>
-    <div class="field">
-      <label>Leave this box checked if you have completed this course, uncheck it if otherwise: <%= f.check_box :post_grad_completed %></label>
-    </div>
-    <legend>Other School Attended</legend>
-  <div class="field">
-    <%= f.label :location %><br />
-    <%= f.text_field :other_location, placeholder: "Leave blank if not applicable" %>
-  </div>
-  <div class="field">
-    <%= f.label :from %><br />
-    <%= f.date_select :other_date_of_attendance1, start_year: Date.today.strftime("%Y").to_i - 65, end_year: Date.today.strftime("%Y").to_i %>
-  </div>
-  <div class="field">
-    <%= f.label :until %><br />
-    <%= f.date_select :other_date_of_attendance2, start_year: Date.today.strftime("%Y").to_i - 65, end_year: Date.today.strftime("%Y").to_i %>
-  </div>
-  <div class="field">
-    <%= f.label :Course %>
-    <%= f.text_field :other_course %>
-  </div>
-  <div class="field">
-    <%= f.label :year_graduated %><br />
-    <%= f.text_field :other_year_graduate %>
-  </div>
-  <div class="field">
-    <%= f.label :standing %>
-    <%= f.text_field :other_standing %>
-  </div>
-    <div class="field">
-      <label>Leave this box checked if you have completed this course, uncheck it if otherwise: <%= f.check_box :other_completed %></label>
-    </div>
-    <legend>Civil Service Eligibility</legend>
-  <div class="field">
-    <label>If any and other seminar qualification acquired:</label><br />
-    <%= f.text_area :civil_service_eligibility, rows: 4 %>
+    <label>Completed?</label>
+    <%= f.check_box :completed %>
   </div>
   <div class="actions">
     <%= f.submit "Save", class: "btn" %>
