--- a/app/views/organizations/_form.html.erb
+++ b/app/views/organizations/_form.html.erb
@@ -25,6 +25,14 @@
     <%= f.label :date_of_membership %><br />
     <%= f.date_select :date_of_membership, start_year: Date.today.strftime("%Y").to_i - 60, end_year: Date.today.strftime("%Y").to_i %>
   </div>
+  <div class="field">
+    <%= f.label :position_held %><br />
+    <%= f.text_field :position_held %>
+  </div>
+  <div class="field">
+    <%= f.label :function %><br />
+    <%= f.text_area :function, rows: 2 %>
+  </div>
   <div class="actions">
     <%= f.submit "Save", class: "btn" %>
   </div>
